# fastapi-questions

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: database.py  load_data.py  main.py  models.py
