[tool.poetry]
name = "fastapi-questions"
version = "0.1.0"
description = "API de preguntas con FastAPI y Hugging Face"
authors = ["Tu Nombre <tu@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.136.3"
uvicorn = "^0.48.0"
sqlalchemy = "^2.0.50"
psycopg2-binary = "^2.9.12"
pandas = "^3.0.3"
pyarrow = "^24.0.0"
requests = "^2.34.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"